--- a/DependencyInjectionKata/DependencyInjectionKata.csproj
+++ b/DependencyInjectionKata/DependencyInjectionKata.csproj
@@ -3,4 +3,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Ninject" Version="3.3.4" />
+  </ItemGroup>
 </Project>
